5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1575_1559.log
== TEST (2019-03-12 12:12:07) 
-- CODE:
frase = Ada Lovelace foi a primeira programadora da historia.
print(.upper(frase))
-- ERROR:
File "XXXX", line 1
    frase = Ada Lovelace foi a primeira programadora da historia.
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:12:37) 
-- CODE:
frase = Ada Lovelace foi a primeira programadora da historia.
print(frase.upper)
-- ERROR:
File "XXXX", line 1
    frase = Ada Lovelace foi a primeira programadora da historia.
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:12:51) 
-- CODE:
frase = Ada Lovelace foi a primeira programadora da historia.
print(frase.upper())
-- ERROR:
File "XXXX", line 1
    frase = Ada Lovelace foi a primeira programadora da historia.
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:12:54) 
-- CODE:
frase = Ada Lovelace foi a primeira programadora da historia.
print(frase .upper())
-- ERROR:
File "XXXX", line 1
    frase = Ada Lovelace foi a primeira programadora da historia.
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:13:44) 
-- CODE:
frase = Ada Lovelace foi a primeira programadora da historia
print(.upper(frase))
-- ERROR:
File "XXXX", line 1
    frase = Ada Lovelace foi a primeira programadora da historia
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:14:41) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase..upper)
-- ERROR:
File "XXXX", line 2
    print(frase..upper)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:14:47) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:15:59) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase.upper)
-- OUTPUT:
<built-in method upper of str object at 0x7f33395d79f0>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:21:49) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase.???.upper())
-- ERROR:
File "XXXX", line 2
    print(frase.???.upper())
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:22:08) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase.).upper()
-- ERROR:
File "XXXX", line 2
    print(frase.).upper()
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:22:18) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase.)
-- ERROR:
File "XXXX", line 2
    print(frase.)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:22:24) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase)
-- OUTPUT:
Ada Lovelace foi a primeira programadora da historia
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:22:30) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase)
-- OUTPUT:
Ada Lovelace foi a primeira programadora da historia.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:22:49) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 13:22:55) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.202615
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
